# CSocket

SocketClient/: CMakeLists.txt  main.c
SocketServer/: CMakeLists.txt  main.c
SocketUtil/: CMakeLists.txt  socketutil.c  socketutil.h
